--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/tags.html
@@ -17,29 +17,31 @@
 {% endblock %}
 
 {% block page %}
-  <h1>
-    <a href="#">
-      <i class="fa fa-bookmark fa-fw"></i>
-      {{ title }}
-    </a>
-  </h1>
-  {% if tag %}
-  <noscript>
-    <form method="POST" action="{% url 'aristotle_favourites:tag_edit' tag.id %}">
-      {% csrf_token %}
-      <div class="form-group">
-        <label for="description">Description</label>
-        <textarea name="description" class="form-control">{{ tag.description }}</textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </noscript>
   <div id="vue-container">
+    <h1>
+      <i class="fa fa-bookmark fa-fw"></i>
+      <inline-edit
+        initial="{{ title }}"
+        field-name="name"
+        submit-url="{% url 'api_v4:tags' tag.id %}">
+      </inline-edit>
+    </h1>
+    {% if tag %}
+    <noscript>
+      <form method="POST" action="{% url 'aristotle_favourites:tag_edit' tag.id %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="description">Description</label>
+          <textarea name="description" class="form-control">{{ tag.description }}</textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </noscript>
     <switch-edit 
       name="description" 
       initial="{{ tag.description }}" 
-      submit-url="{% url 'aristotle_favourites:tag_edit' tag.id %}" 
-    ></switch-edit>
+      submit-url="{% url 'api_v4:tags' tag.id %}">
+    </switch-edit>
   </div>
   {% endif %}
   {% if page_obj %}
