Fix inline edit init

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/all_tags.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/favourites/templates/aristotle_mdr/favourites/all_tags.html
@@ -19,6 +19,7 @@
 {% block page %}
   <div id="vue-container">
     <h1>All Tags</h1>
+    <api-errors :errors="errors"></api-errors>
     {% if page_obj %}
       <table class="table">
         <thead>
