Fix ie11 profile picture scaling

--- a/assets/src/styles/aristotle.less
+++ b/assets/src/styles/aristotle.less
@@ -543,3 +543,9 @@ background: repeating-linear-gradient(
 .ta-fixed-width {
     resize: vertical
 }
+
+.small-profile-picture {
+    /* Required for proper ie11 scaling */
+    max-width: 100%;
+    max-height: 100%;
+}
