--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/header.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/header.html
@@ -58,7 +58,7 @@
             {% with notecount=user.notifications.count %}
               <li class="dropdown">
                   <a id="header_menu_button_user" href="{% url 'aristotle:userHome' %}" accesskey="u" class="dropdown-toggle" role="menu" data-toggle="dropdown" title="{% trans 'Open user menu' %}">
-                      <img style="" src="{{ request.user.profile.profile_picture_url }}" width="20px" alt="Profile Picture"></img>
+                      <img class="small-profile-picture" src="{{ request.user.profile.profile_picture_url }}" width="20px" alt="Profile Picture"></img>
                       {% firstof user.get_short_name user.email %}
                       {% if user.is_superuser %}
                           <em>(Admin)</em>
@@ -69,7 +69,7 @@
                           <i class="fa fa-home fa-fw"></i> {% trans 'My Dashboard'%}
                       </a></li>
                       <li><a href="{% url 'aristotle:userProfile' %}">
-                          <img style="" src="{{ request.user.profile.profile_picture_url }}" width="18px" alt="Profile Picture"></img>
+                          <img class="small-profile-picture" src="{{ request.user.profile.profile_picture_url }}" width="18px" alt="Profile Picture"></img>
                           {% trans 'My Profile'%}
                       </a></li>
                       <li><a href="{% url 'aristotle_favourites:favs_and_tags' %}">
