Initial create view and tests

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userAdminTools.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userAdminTools.html
@@ -48,7 +48,7 @@
           <i class="fa fa-user" aria-hidden="true"></i>
           Manage Users
         </a>
-        <a class="list-group-item" href="#">
+        <a class="list-group-item" href="{% url 'aristotle_custom_fields:create' %}">
           <i class="fa fa-i-cursor" aria-hidden="true"></i>
           Manage Custom Fields
         </a>
