Add update, delete, list views

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/field_form.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/field_form.html
@@ -1,7 +1,7 @@
 {% extends 'aristotle_mdr/user/base.html' %}
 
 {% block page %}
-  <h1>Create Custom Field</h1>
+<h1>{{ heading }}heading</h1>
 
   <form action="" method="post">
     {% include 'aristotle_mdr/helpers/fancy_table_form.html' with form=form %}
