--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/field_form.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/field_form.html
@@ -1,10 +1,10 @@
 {% extends 'aristotle_mdr/user/base.html' %}
 
 {% block page %}
-<h1>{{ heading }}heading</h1>
+<h1>{{ heading }}</h1>
 
   <form action="" method="post">
     {% include 'aristotle_mdr/helpers/fancy_table_form.html' with form=form %}
-    <button class="btn btn-success" type="submit">Create</button>
+    <button class="btn btn-success" type="submit">{{ submit_text }}</button>
   </form>
 {% endblock %}
