Add to boot table list

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/delete.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/delete.html
@@ -1,3 +1,5 @@
-{% extends 'aristotle_mdr/user/base %}
+{% extends 'aristotle_mdr/user/base.html' %}
 
-{% include 'aristotle_mdr/helpers/delete.html with object_name=object.name %}
+{% block page %}
+  {% include 'aristotle_mdr/helpers/delete.html' with object_name=object.name %}
+{% endblock %}
