--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/field_form.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/field_form.html
@@ -4,6 +4,7 @@
 <h1>{{ heading }}</h1>
 
   <form action="" method="post">
+    {% csrf_token %}
     {% include 'aristotle_mdr/helpers/fancy_table_form.html' with form=form %}
     <button class="btn btn-success" type="submit">{{ submit_text }}</button>
   </form>
