--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/generic/boottablelist.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/generic/boottablelist.html
@@ -1,20 +1,31 @@
 {% extends 'aristotle_mdr/user/base.html' %}
 
+{% block page %}
 <h1>{{ page_heading }}</h1>
+{% if create_url %}
+  <a class="btn btn-success pull-right" href="{{ create_url }}">{{ create_button_text }}</a>
+{% endif %}
 <table class="table">
   <thead>
-    {% for head in heading %}
+    {% for head in headers %}
     <th>{{ head }}</th>
     {% endfor %}
   </thead>
   <tbody>
-    {% for attrlist in list %}
-      {% for attr in attrlist %}
+    {% for itemdict in list %}
+      {% for attr in itemdict.attrs %}
         <td>{{ attr }}</td>
       {% endfor %}
+      {% if update_url_name %}
+        <td><a class="btn btn-primary" href="{% url update_url_name itemdict.pk %}">Update</a></td>
+      {% endif %}
+      {% if delete_url_name %}
+        <td><a class="btn btn-danger" href="{% url delete_url_name itemdict.pk %}">Delete</a></td>
+      {% endif %}
     {% endfor %}
   </tbody>
 </table>
+{% endblock %}
 
 {% if page_obj %}
   {% include 'aristotle_mdr/helpers/paginator.html' with page=page_obj %}
