--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/delete.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/helpers/delete.html
@@ -1,4 +1,5 @@
 <form action="" method="post">
+  {% csrf_token %}
   Are you sure you want to delete {{ object_name }}?
   <button type="submit" class="btn btn-danger">Delete</button>
 </form>
