--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_editor.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_editor.html
@@ -167,6 +167,19 @@
                 your registry for this particular metadata type.
                 </p>
             </div>
+            {% for field in form.custom_fields %}
+              <div class="wizard_field">
+                  <span>{{ field.label_tag }} {{ field.help_text }}</span>
+                  {% if field.errors %}
+                  <span class="alert alert-danger">
+                      {{ field.errors }}
+                  {% endif %}
+                  {{ field }}
+                  {% if field.errors %}
+                      </span>
+                  {% endif %}
+              </div>
+            {% endfor %}
             {% include 'aristotle_mdr/slots/slots_editor_tab.html' %}
         </div>
         {% endif %}
