--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/actions/bulk_actions/request_review.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/actions/bulk_actions/request_review.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/base.html" %}
-{% load compile_static i18n humanize %}
+{% load i18n humanize %}
 {% load aristotle_tags %}
 
 {% block title %}Request review for multiple items{% endblock %}
@@ -54,5 +54,4 @@
         <input type="submit" name="confirmed" class="btn btn-primary" value="Request Review" />
     </div>
 </form>
-{% include 'autocomplete_light/static.html' %}
 {% endblock %}
