--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/issues/templates/aristotle_mdr/issues/display.html
@@ -22,7 +22,7 @@
       {% if own_issue %}
         <inline-edit
           initial="{{ object.name }}"
-          submit-url="{% url 'api_v4:issues' object.id %}"
+          submit-url="{% url 'api_v4:issues:issue' object.id %}"
           field-name="name">
         </inline-edit>
       {% else %}
@@ -34,7 +34,7 @@
       <switch-edit-api
         name="description"
         initial="{{ object.description }}"
-        {% if own_issue %}submit-url="{% url 'api_v4:issues' object.id %}"{% endif %}
+        {% if own_issue %}submit-url="{% url 'api_v4:issues:issue' object.id %}"{% endif %}
         >
       </switch-edit-api>
     </p>
@@ -65,8 +65,8 @@
   user-name="{{ user.get_short_name }}"
   issue-id="{{ object.id }}"
   issue-is-open="{{ object.isopen }}"
-  comment-url="{% url 'api_v4:issue_comment' %}"
-  open-close-url="{% url 'api_v4:issue_update_and_comment' object.id %}"
+  comment-url="{% url 'api_v4:issues:comment' %}"
+  open-close-url="{% url 'api_v4:issues:update_and_comment' object.id %}"
   open-close-permission="{{ can_open_close }}"
   @set_open="setIsOpen"
   @created="addComment">
