--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/user/user_request_accept.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/user/user_request_accept.html
@@ -1,16 +1,18 @@
 {% extends "aristotle_mdr/helpers/wizard_form_modal.html" %}
-{% load compile_static i18n %}
+{% load i18n %}
 {% load aristotle_tags %}
 
 {% block title %}Accept Request{% endblock %}
 
 {% block form_tag %}
-<form method="post" action="{% url 'aristotle:userReviewAccept' review.id %}">
+<form method="post" action="{% url 'aristotle_reviews:accept_review' review.id %}">
 {% endblock %}
 
 {% block form %}
       <ol class="breadcrumb">
-        <li><a href="{% url 'aristotle:userReadyForReview' %}">Review list</a></li>
+        <li><a href="{{review.registration_authority.get_absolute_url }}">{{review.registration_authority.name }}</a></li>
+        <li class="active"><a href="{% url 'aristotle_reviews:userReadyForReview' %}">Reviews</a></li>
+        <li><a href="{% url 'aristotle_reviews:review_details' review.id %}">{{review.title}}</a></li>
         <li class="active">Approve review request</li>
       </ol>
 
@@ -37,14 +39,18 @@
       </div>
       <section>
       <div class="status_change_description">
-          <label for='id_response'>{{ wizard.form.response.label }}:</label> {{ wizard.form.response.help_text }}
-          {{ wizard.form.response }}
+          <label for='id_status_message'>{{ wizard.form.status_message.label }}:</label> {{ wizard.form.status_message.help_text }}
+          {{ wizard.form.status_message }}
+      </div>
+      <div class="status_change_description">
+          <label for='id_close_review'>{{ wizard.form.close_review.label }}:</label> {{ wizard.form.close_review.help_text }}
+          {{ wizard.form.close_review }}
       </div>
       </section>
 {% endblock %}
 
 {% block buttons %}
-<a class="btn btn-default" href="{% url 'aristotle:userReadyForReview' %}" data-dismiss="modal">Cancel</a>
+<a class="btn btn-default" href="{% url 'aristotle_reviews:review_details' review.id %}" data-dismiss="modal">Cancel</a>
 <input class="btn btn-success" type="submit" name="submit_next" value="{% trans 'Review Changes' %}" />
 <input class="btn btn-primary" type="submit" name="submit_skip" value="{% trans 'Update Status' %}" />
 {% endblock %}
