--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
@@ -25,7 +25,8 @@
             <i class="fa fa-fw fa-history"></i> {% trans 'View changes'%}
         </a></li>
         <li class="divider"></li>
-        <li><a class="" href="{% url 'aristotle_reviews:request_review' item.id %}" data-toggle="modal" data-target="#infobox_adv_edit">
+        <li>
+            <a class="" href="{% url 'aristotle_reviews:review_create' %}?items={{item.id}}" data-toggle="modal" data-target="#infobox_adv_edit">
             <i class="fa fa-fw fa-flag"></i> {% trans 'Submit for review'%}
         </a></li>
 
