--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/generic/boottablelist.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/generic/boottablelist.html
@@ -5,6 +5,10 @@
 {% if create_url %}
   <a class="btn btn-success pull-right" href="{{ create_url }}">{{ create_button_text }}</a>
 {% endif %}
+
+{% block extra_content %}
+{% endblock %}
+
 <table class="table">
   <thead>
     <tr>
