Correctly display initial state

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
@@ -12,6 +12,6 @@
 {% block page %}
 <h1>MultiEdit</h1>
 <div id="vue-container">
-  <cf-edit data-fields="{{ vue_fields }}"><cf-edit>
+  <cf-edit data-fields="{{ vue_fields }}" data-initial="{{ initial }}"><cf-edit>
 </div>
 {% endblock %}
