--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
@@ -5,7 +5,7 @@
   {% render_bundle 'custom_field_edit' 'js' %}
 {% endblock %}
 
-{% block webpack_bundle_css %}
+{% block webpack_css_bundle %}
   {% render_bundle 'custom_field_edit' 'css' %}
 {% endblock %}
 
