Remove old create, update, delete views

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block page %}
-<h1>MultiEdit</h1>
+<h1>Edit Custom Fields</h1>
 <div id="vue-container">
   <cf-edit 
     data-fields="{{ vue_fields }}" 
