--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/custom_fields/templates/aristotle_mdr/custom_fields/multiedit.html
@@ -12,10 +12,11 @@
 {% block page %}
 <h1>Edit Custom Fields</h1>
 <div id="vue-container">
-  <cf-edit 
+  <formset 
     data-fields="{{ vue_fields }}" 
     data-initial="{{ vue_initial }}"
+    data-dont-submit="{{ vue_dont_submit }}"
     url="{% url 'api_v4:custom_field_list' %}">
-  <cf-edit>
+  </formset>
 </div>
 {% endblock %}
