--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_2_results.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/concept_wizard_2_results.html
@@ -81,7 +81,7 @@
     {% endif %}
     <div class="row">
         <div class="col-sm-12">
-            {% include "aristotle_mdr/create/concept_editor.html" with form=wizard.form weak_formsets=weak_formsets through_formsets=through_formsets %}
+            {% include "aristotle_mdr/create/concept_editor.html" with form=wizard.form weak_formsets=weak_formsets through_formsets=through_formsets slots_FormSet=slots_FormSet%}
         </div>
     </div>
 {% endblock %}
@@ -93,6 +93,9 @@
 {% for formset in through_formsets %}
 {% include 'aristotle_mdr/generic/actions/alter_one_to_many_formstage.html' with formset=formset.formset %}
 {% endfor %}
+{% if slots_FormSet %}
+  {% include 'aristotle_mdr/generic/actions/alter_one_to_many_formstage.html' with formset=slots_FormSet %}
+{% endif %}
 {% endblock %}
 
 {% block next_button %}
