--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/actionbar.html
@@ -26,7 +26,7 @@
         </a></li>
         <li class="divider"></li>
         <li>
-            <a class="" href="{% url 'aristotle_reviews:review_create' %}?items={{item.id}}" data-toggle="modal" data-target="#infobox_adv_edit">
+            <a class="" href="{% url 'aristotle_reviews:review_create' %}?items={{item.id}}">
             <i class="fa fa-fw fa-flag"></i> {% trans 'Submit for review'%}
         </a></li>
 
