--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/user/user_request_endorse.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/user/user_request_endorse.html
@@ -54,6 +54,10 @@
           <label for='id_close_review'>{{ wizard.form.close_review.label }}:</label> {{ wizard.form.close_review.help_text }}
           {{ wizard.form.close_review }}
       </div>
+      <div class="status_change_description">
+          <label for='id_cascade_registration'>{{ wizard.form.cascade_registration.label }}:</label> {{ wizard.form.cascade_registration.help_text }}
+          {{ wizard.form.cascade_registration }}
+      </div>
       </section>
 {% endblock %}
 
