fix item title fix #1019

--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/titles/display_title.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/concepts/titles/display_title.html
@@ -2,7 +2,7 @@
 {% load aristotle_tags %}
 
 <h1 id="objectTitle"  class="pull-left">
-    <a href="#">{{ item.name }}</a>
+    <a href="{{ item.get_absolute_url }}">{{ item.name }}</a>
     {% if item.version %}
     <em class="version" title="{% trans 'Version'%} {{ item.version }}">
         {{ item.version }}
