Implemented responsiveness and placeholder for Search bar of the app.

--- a/assets/src/styles/aristotle.less
+++ b/assets/src/styles/aristotle.less
@@ -543,3 +543,14 @@ background: repeating-linear-gradient(
 .ta-fixed-width {
     resize: vertical
 }
+
+.extended-search-bar {
+
+    @media (min-width: 992px) {
+        min-width: 310px;
+    }
+
+    @media (min-width: 1200px) {
+        min-width: 500px;
+    }
+}
