--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/header.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/header.html
@@ -80,11 +80,14 @@
                           <i class="fa fa-envelope fa-fw"></i> {% trans 'Notifications'%}
                           <span class="badge" title="{{ notecount }} unread notifications">{{ notecount }}</span>
                       </a></li>
+                      <li><a href="{% url 'aristotle:userWorkgroups' %}">
+                          <i class="fa fa-users fa-fw"></i> {% trans 'Workgroups'%}
+                      </a></li>
                       <li><a href="{% url 'aristotle:discussions' %}">
                           <i class="fa fa-comments fa-fw"></i> {% trans 'Discussions'%}
                       </a></li>
-                      <li><a href="{% url 'aristotle:userWorkgroups' %}">
-                          <i class="fa fa-users fa-fw"></i> {% trans 'Workgroups'%}
+                      <li><a href="{% url 'aristotle:userSandbox' %}">
+                          <i class="fa fa-pencil-square-o fa-fw"></i> {% trans 'My Sandbox'%}
                       </a></li>
                       <li><a href="{% url 'aristotle:userRecentItems' %}">
                           <i class="fa fa-history fa-fw"></i> {% trans 'Recent actions'%}
