--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/download_options.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/download_options.html
@@ -1,9 +1,10 @@
 {% extends 'aristotle_mdr/base.html' %}
 
 {% block content %}
+<h1>Download Options</h1>
 <form method="POST">
   {% csrf_token %}
-  {{ form }}
+  {% include 'aristotle_mdr/helpers/fancy_table_form.html' with form=form %}
   <button class='btn btn-primary'>Download</button>
 </form>
 {% endblock %}
