--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/creating_download.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/downloads/creating_download.html
@@ -3,11 +3,19 @@
 <!--Adding meta to refresh every 10 seconds-->
 {% block extra_head_scripts %}
 {% load staticfiles %}
+{% load render_bundle from webpack_loader %}
 <script src="{% static 'aristotle_mdr/aristotle.downloads.js' %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block title %} Preparing download{% endblock %}
 
+{% block webpack_bundle %}
+  {% render_bundle 'download' 'js' %}
+{% endblock %}
+
+{% block webpack_css_bundle %}
+  {% render_bundle 'download' 'css' %}
+{% endblock %}
 
 {% block content %}
 <div style="height: 400px;">
@@ -46,25 +54,4 @@
         </div>
     </div>
 </div>
-<script async>
-    $(document).ready(function () {
-        function initDownloadsPage() {
-            goBackDownloadButton();
-
-            {% if is_expired %}
-            downloadReady = true
-            expireDownload();
-            {% elif file_details.download_url %}
-            downloadReady = true
-            readyDownload({
-                ttl: {{file_details.ttl}},
-                download_url: '{{file_details.download_url}}'
-            });
-            {% endif %}
-        }
-
-        initDownloadsPage();
-    })
-</script>
-
 {% endblock %}
