--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/groups/templates/groups/group/detail.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/groups/templates/groups/group/detail.html
@@ -1,7 +1,7 @@
 {% extends "groups/base.html" %}
 {% load group_tags %}
 
-{% block content %}
+{% block group_content %}
 <h1>
     {{object.name}}
 </h1>
@@ -13,6 +13,7 @@
 
 <h2>Members</h2>
 <a href="{%url view.manager.namespace|add:":member_list" object.slug %}">Edit roles</a>
+<a href="{%url view.manager.namespace|add:":member_add" object.slug %}">Add member</a>
 
 <ul>
     {% regroup object.members.all by user as member_list %}
