--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/groups/templates/groups/group/list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/groups/templates/groups/group/list.html
@@ -1,7 +1,7 @@
 {% extends "groups/base.html" %}
 {% load group_tags %}
 
-{% block content %}
+{% block group_content %}
 <h1>
     {{view.manager.group_meta.verbose_name.title}}
 </h1>
