--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/groups/templates/groups/group/update.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/groups/templates/groups/group/update.html
@@ -1,7 +1,7 @@
 {% extends "groups/base.html" %}
 {% load group_tags %}
 
-{% block content %}
+{% block group_content %}
 <h1>
     Edit {{object.name}}
 </h1>
