--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userProfile.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userProfile.html
@@ -70,6 +70,20 @@
 
     <div class="panel panel-default">
       <div class="panel-heading">
+        Organisations <small>- You belong to the following Stewardship Organisations</small>
+      </div>
+      <div class="list-group">
+        <span class="list-group-item clearfix" >
+          {% for membership in user.stewardorganisationmembership_set.all %}
+            <a href="{{membership.group.get_absolute_url}}">{{membership.group}}</a>
+            <!--<a href="" class="btn btn-xs pull-right btn-default" >Leave</a>-->
+          {% endfor %}
+        </span>
+        </div>
+    </div>
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
         Sessions
       </div>
       {% include 'aristotle_mdr/user/session_list.html' with object_list=sessions %}
