created modified replacement

--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/regular_help.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/regular_help.html
@@ -19,6 +19,6 @@
 </div>
 
 <p>
-    Last modified: {{ object.modified }}
+    Last modified: <time datetime="{{ object.modified|isotime }}">{{ object.modified }}</time>
 </p>
 {% endblock %}
