--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/request_review_details.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/request_review_details.html
@@ -30,10 +30,10 @@
                 </td>
             </tr>
             <tr>
-                <td>Requested: {{ review.created }}</td>
+                <td>Requested: <time datetime="{{ review.created|isotime }}">{{ review.created }}</time></td>
                 <td>Updated: 
                 {% if review.created != review.modified %}
-                    {{ review.modified }}
+                    <time datetime="{{ review.modified|isotime }}">{{ review.modified }}</time>
                 {% endif %}
                 </td>
             </tr>
