--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
@@ -79,7 +79,7 @@
                 <ul class="list-group">
                 {% for data in recentdata %}
                     <li class="list-group-item">
-                        <span>{{ data.revision.comment }} <small>({{ data.revision.date_created }})</small></span>
+                        <span><time datetime="{{ data.revision.comment }} <small>({{ data.revision.date_created|isotime }}">{{ data.revision.comment }} <small>({{ data.revision.date_created }}</time>)</small></span>
                         <ul>
                             {% for item in data.versions %}
                                   <li><a href="{{ item.url }}">{{ item.text }} ({{ item.id }})</a></li>
