--- a/python/aristotle-mdr-api/aristotle_mdr_api/templates/aristotle_mdr_api/token.html
+++ b/python/aristotle-mdr-api/aristotle_mdr_api/templates/aristotle_mdr_api/token.html
@@ -16,7 +16,7 @@
     {% for token in object_list %}
     <tr>
       <td><a href="{% url 'token_auth:token_update' token.id %}">{{ token.name }}</a></td>
-      <td>{{ token.created }}</td>
+      <td><time datetime="{{ token.created|isotime }}">{{ token.created }}</time></td>
       <td><a class="btn btn-danger" href="{% url 'token_auth:token_delete' token.id %}">Delete</a></td>
     </tr>
     {% endfor %}
