--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/concept_history.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/actions/concept_history.html
@@ -35,7 +35,7 @@
 <tbody>
     {% for version in versions %}
     <tr>
-        <td>{{ version.revision.date_created }}</td>
+        <td><time datetime="{{ version.revision.date_created|isotime }}">{{ version.revision.date_created }}</time></td>
         <td>{% firstof version.revision.comment _('No version comment made') %}</td>
         <td>{{ version.revision.user }}</td>
         {# <td><a href='' title="{% trans 'Compare to previous' %}"><i class="fa fa-copy"></i></a></td> #}
