--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/search/searchItem.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/search/searchItem.html
@@ -9,9 +9,9 @@
 </p>
 <div class="attrs">
     <span class="attr">
-        {# <span class="time">Created: {{ object.created }}</span> #}
+        {# <span class="time">Created: <time datetime="{{ object.created|isotime }}">{{ object.created }}</time></span> #}
         <header class="time">Last modified:</header>
-        {{ object.modified }}
+        <time datetime="{{ object.modified|isotime }}">{{ object.modified }}</time>
     </span>
     <span class="attr">
         <header>Statuses:</header>
