--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/workgroups/steward_list.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/workgroups/steward_list.html
@@ -9,12 +9,16 @@
 {% endblock %}
 
 {% block page %}
-<li>{{ group }}</li>
-<h1>{% block title %}All Workgroups{% endblock %}</h1>
+<h1>
+    <ul class="breadcrumb">
+    <li>{{ stewardship_organisation }}</li>
+    <li>{% block title %}All Workgroups{% endblock %}</li>
+    </ul>
+</h1>
 
 <section id="workgroups">
     <a class="btn btn-default" href="{% url 'aristotle:workgroup_create'%}">Add New Workgroup</a>
     
-    {% include "aristotle_mdr/helpers/paginated_workgroup_list.html" with page=page show_all=True %}
+    {% include "aristotle_mdr/helpers/paginated_workgroup_list.html" with page=page show_all=True show_stewardship_organisations=False %}
 </section>
 {% endblock %}
