--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/regular_help.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/aristotle_mdr_help/regular_help.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr_help/base.html" %}
-{% load aristotle_help %}
+{% load aristotle_help util_tags %}
 
 {% block title %}Help - {{ object.title }}{% endblock %}
 
