--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/search/searchHelpPage.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/help/templates/search/searchHelpPage.html
@@ -1,4 +1,4 @@
-{% load humanize %}
+{% load util_tags humanize %}
 <div class="result">
 <a href="{% url 'aristotle_help:help_page' object.slug %}">{{ object.title }}</a>
 <span class="item_type">(Help page)</span>
