--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/wizard_search_result_item.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/create/wizard_search_result_item.html
@@ -1,4 +1,4 @@
-{% load humanize %}
+{% load util_tags humanize %}
 <div class="result">
 {% if object.id %}
 <a href="{% url 'aristotle:item' object.id %}">{{ object.name }}</a>
