--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/user/userHome.html
@@ -1,5 +1,5 @@
 {% extends "aristotle_mdr/user/base.html" %}
-{% load aristotle_tags humanize %}
+{% load aristotle_tags util_tags humanize %}
 {% load static from staticfiles %}
 
 
