--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/registrationHistory.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/registrationHistory.html
@@ -30,7 +30,7 @@
             <tbody>
             {% for status in states %}
                 <tr>
-                    <td>{{ status.registrationDate }}</td>
+                    <td><time datetime="{{ status.registrationDate|isotime }}">{{ status.registrationDate }}</time></td>
                     <td>{{ status.until_date }}</td>
                     <td><a title='' href='{% url 'aristotle:registrationAuthority' ra.id %}#state_{{ status.state }}'>{{ status.state|stateToText }}</a></td>
                     <td>{{ status.changeDetails }}</td>
