--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/statuses.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/statuses.html
@@ -13,14 +13,14 @@
         {% for status in statuses.all %}
         <li>
             <a href="{% url 'aristotle:registrationAuthority' status.registrationAuthority.id status.registrationAuthority.name|slugify %}">{{ status.registrationAuthority }}</a>
-            : {% trans status.state_name %} on {{ status.registrationDate }}
+            : {% trans status.state_name %} on <time datetime="{{ status.registrationDate|isotime }}">{{ status.registrationDate }}</time>
             </li>
         {% endfor %}
     {% else %}
         {% for status in statuses %}
         <li>
            <a href="{% url 'aristotle:registrationAuthority' status.registrationAuthority.id status.registrationAuthority.name|slugify %}">{{ status.registrationAuthority }}</a>
-            : {% trans status.state_name %} on {{ status.registrationDate }}
+            : {% trans status.state_name %} on <time datetime="{{ status.registrationDate|isotime }}">{{ status.registrationDate }}</time>
             </li>
         {% empty %}
             <li><em>{% trans 'Not endorsed' %}</em>
