--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/registrationHistory.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/registrationHistory.html
@@ -1,5 +1,5 @@
 {% extends 'aristotle_mdr/base.html' %}
-{% load aristotle_tags i18n %}
+{% load aristotle_tags util_tags i18n %}
 {% block title %}Registration History of {{ item.name }}{% endblock %}
 
 {% block content %}
