--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/statuses.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/statuses.html
@@ -1,4 +1,4 @@
-{% load i18n aristotle_tags %}
+{% load i18n aristotle_tags util_tags %}
 
 <span>{% trans 'Endorsed by' %}: </span>
 {% if user.profile.is_registrar %}
