--- a/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/extra_content/registrationAuthority.html
+++ b/python/aristotle-dataset-extensions/aristotle_dse/templates/aristotle_dse/extra_content/registrationAuthority.html
@@ -1,4 +1,4 @@
-{% load aristotle_tags %}
+{% load aristotle_tags util_tags %}
 
 {% with standardDSS=item|public_standards:"aristotle_dse.DataSetSpecification" %}
 {% if standardDSS %}
