--- a/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/infobox_statuses.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/templates/aristotle_mdr/infobox_statuses.html
@@ -1,4 +1,4 @@
-{% load i18n aristotle_tags %}
+{% load i18n aristotle_tags util_tags %}
 
 <dt class="large">
     <span>{% trans 'Endorsed by' %}</span>
