--- a/python/aristotle-pdf-downloads/aristotle_pdf/templates/aristotle_mdr/downloads/pdf/component/statuses.html
+++ b/python/aristotle-pdf-downloads/aristotle_pdf/templates/aristotle_mdr/downloads/pdf/component/statuses.html
@@ -1,4 +1,4 @@
-{% load i18n aristotle_tags %}
+{% load i18n aristotle_tags util_tags %}
 
 <span>{% trans 'Endorsed by' %}: </span>
 {% if user.profile.is_registrar %}
