--- a/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/user/user_request_endorse.html
+++ b/python/aristotle-metadata-registry/aristotle_mdr/contrib/reviews/templates/aristotle_mdr/user/user_request_endorse.html
@@ -48,7 +48,7 @@
       </div>
       <div class="status_change_description">
           <label for='id_registration_date'>{{ wizard.form.registration_date.label }}:</label> {{ wizard.form.registration_date.help_text }}
-          <time datetime="{{ wizard.form.registration_date|isotime }}">{{ wizard.form.registration_date }}</time>
+          {{ wizard.form.registration_date }}
       </div>
       <div class="status_change_description">
           <label for='id_close_review'>{{ wizard.form.close_review.label }}:</label> {{ wizard.form.close_review.help_text }}
